--- a/style.css
+++ b/style.css
@@ -13,8 +13,16 @@
 .sliderContainer{
     width: 100%;
 }
+.odcinek {
+    height: 36px;
+    width: 100%;
+    background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(179,113,8,0) 8%, rgba(210,133,3,1) 12%, rgba(179,145,41,0) 55%, rgba(0,212,255,0) 100%);
+    position: absolute;
+    z-index: -1;
+}
 .slider {
-    width: 50%;
+    width: 730px;
     height: 30px;
     background-color: red;
 }
