--- a/style.css
+++ b/style.css
@@ -1,11 +1,87 @@
+body {
+    display: grid;
+    background-color: #E2E2E2;
+    color: #0d0d0d;
+    grid-template-columns: 360px auto;
+    font-family: 'Montserrat', sans-serif;
+}
+aside {
+    background-image: url(img/bcg/asside.jpg);
+    -webkit-box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
+    -moz-box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
+    box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
+
+
+}
+main {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+nav {
+    width: 100%;
+    margin-bottom: 30px;
+    display: grid;
+    grid-template-columns: 160px auto auto;
+    
+}
+.navButton {
+    background-color: white;
+    height: 75px;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 30px;
+}
+nav .fbicon {
+    justify-self: right;
+    font-size: 2.2rem;
+    position: relative;
+    right: -38px;
+    top: 4px;
+}
+.navButton i {
+    font-size: 20px;
+    padding-top: 5px;
+    margin-right: 12px;
+}
+.fbLike {
+    position: relative;
+    right: -35px;
+    margin: 15px 0 0 8px;
+    width: 120px;
+}
+.likeButton {
+    
+    font-size: 0.7rem;
+    
+}
+.likeButton span {
+    -webkit-border-radius: 14px;
+    -moz-border-radius: 14px;
+    border-radius: 14px;
+    color: white;
+    background-color: #0d0d0d;
+    padding: 4px 12px;
+}
+.likeButton span i {
+    padding-left: 5px;
+}
+.likeButton p {
+    margin: 5px 0 0 8px;
+    font-size: 0.6rem;
+}
 .kwitnie  {
-    background-color: orange;
-    fill:#76007F;
+    fill:#FECD05;
    
 }
 .wojewodztwo {
     stroke:#FFFFFF;
     stroke-width:3;
+    /* fill:#0375B4; */
 }
 .kwitniefull {
     background-color: orangered;
@@ -13,14 +89,14 @@
 .sliderContainer{
     width: 100%;
 }
-.odcinek {
+/* .odcinek {
     height: 36px;
     width: 100%;
     background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(179,113,8,0) 8%, rgba(210,133,3,1) 12%, rgba(179,145,41,0) 55%, rgba(0,212,255,0) 100%);
+    background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(179,113,8,0) 8%, rgba(210,133,3,1) 12%, rgba(179,145,41,0) 55%, rgba(0,212,255,0) 100%);
     position: absolute;
     z-index: -1;
-}
+} */
 .slider {
     width: 730px;
     height: 30px;
@@ -28,14 +104,7 @@ background: linear-gradient(90deg, rgba(2,0,36,0) 0%, rgba(179,113,8,0) 8%, rgba
 }
 /* MAP styles */
 #mapSvg {
-    width: 50%;
+    height: 90vh;
 }
-.st0{fill:#FFFFFF;stroke:#000000;stroke-miterlimit:10;}
-.st1{fill:#000074;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st2{fill:#4769FF;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st3{fill:#AABDEF;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st4{fill:#76007F;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st5{fill:#00023A;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st6{fill:#0010C0;stroke:#FFFFFF;stroke-width:3;stroke-miterlimit:10;}
-.st7{fill:#656565;}
-.st8{fill:#000000;}
+
+
