--- a/style.css
+++ b/style.css
@@ -10,14 +10,51 @@ aside {
     -webkit-box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
     -moz-box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
     box-shadow: 5px 0px 30px 0px rgba(0,0,0,0.14);
-
-
+}
+h1 {
+    font-size: 2.2rem;
+    font-weight: 700;
+    line-height: 2.7rem;
+}
+h1 span {
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+header, article, .charts {
+    padding: 10px 20px;
 }
 main {
     display: flex;
     align-items: center;
     justify-content: center;
-    
+}
+.charts p {
+    font-weight: 700;
+    font-size: .8rem;
+}
+.chartBcg {
+    display: block;
+    width: 100%;
+    height: 1.3rem;
+    border: 1px solid #0d0d0d;
+    margin-bottom: 6px;
+}
+.chartBar {
+    background-color: #0d0d0d;
+    height: 100%;
+    color: white;
+    font-size: .8rem;
+    font-weight: 300;
+    padding-left: 10px;
+}
+#chartP1 {
+    width: 75%;
+}
+#chartP2 {
+    width: 15%;
+}
+#chartP3 {
+    width: 65%;
 }
 nav {
     width: 100%;
@@ -26,8 +63,12 @@ nav {
     grid-template-columns: 160px auto auto;
     
 }
+button {
+    outline:none;
+}
 .navButton {
     background-color: white;
+
     height: 75px;
     grid-column-start: 1;
     grid-column-end: 2;
@@ -35,6 +76,11 @@ nav {
     align-items: center;
     justify-content: center;
     font-size: 30px;
+    
+}
+.navButton:hover {
+    background-color: #E2E2E2;
+
 }
 nav .fbicon {
     justify-self: right;
@@ -74,6 +120,44 @@ nav .fbicon {
     margin: 5px 0 0 8px;
     font-size: 0.6rem;
 }
+
+.mainButton {
+    width: 100%;
+    height: 2rem;
+    font-size: 1.2rem;
+    font-family: inherit;
+    font-weight: 500;
+    background-color: white;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    border-radius: 1rem;
+    padding: 0;
+    border: 1px solid #0d0d0d;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    
+    
+    
+}
+.mainButton:active{
+/* background-color: #E2E2E2; */
+position: absolute;
+top: 50px;
+height: 90vh;
+width: 330px;
+}
+.mainButton i {
+    padding-left: 20px;
+    
+}
+.mainButton:hover i {
+    
+}
+
+
+
+
 .kwitnie  {
     fill:#FECD05;
    
